--- a/index.html
+++ b/index.html
@@ -33,13 +33,8 @@
         <div id="examHeader">
           <button id="backToWeeks">← Back</button>
           <h2 id="examTitle">Week</h2>
+          <div id="timer">Time: <span id="timeLeft">--:--</span></div>
         </div>
-        
-        <!-- YAHAN TIMER ADD KIYA HAI -->
-        <div id="timer" style="text-align: center; font-size: 20px; font-weight: bold; margin: 15px 0; padding: 10px; background: #f0f8ff; border-radius: 8px; border: 2px solid #007bff;">
-          ⏰ Time Remaining: <span id="timeDisplay">180:00</span>
-        </div>
-        
         <div id="questionArea"></div>
         <div id="examControls">
           <button id="prevQ">Previous</button>
