--- a/index.html
+++ b/index.html
@@ -1,57 +1,58 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NEET Practice Portal</title>
-  <link rel="stylesheet" href="style.css" />
-  <!-- Firebase SDK (use script option) -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
-  <script src="firebase-config.js"></script> <!-- put your config here -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="wrap">
-    <header>
-      <h1>NEET Practice Portal</h1>
-      <div id="userBadge" class="hidden"></div>
-    </header>
+  <!-- ===== Enter Name Section ===== -->
+  <section id="enterSection">
+    <h2>Enter Your Name</h2>
+    <input type="text" id="studentName" placeholder="Your Name">
+    <button id="enterBtn">Enter</button>
+  </section>
 
-    <main id="main">
-      <section id="enterSection">
-        <input id="studentName" placeholder="Enter your name" />
-        <button id="enterBtn">Enter</button>
-      </section>
+  <!-- ===== User Badge ===== -->
+  <div id="userBadge" class="hidden"></div>
 
-      <section id="weeksSection" class="hidden">
-        <h2>Weeks Schedule</h2>
-        <div id="weeksContainer" class="weeks-grid"></div>
-      </section>
+  <!-- ===== Weeks Section ===== -->
+  <section id="weeksSection" class="hidden">
+    <h2>Weeks</h2>
+    <div id="weeksContainer"></div>
+  </section>
 
-      <section id="examSection" class="hidden">
-        <div id="examHeader">
-          <button id="backToWeeks">← Back</button>
-          <h2 id="examTitle">Week</h2>
-          <div id="timer">Time: <span id="timeLeft">--:--</span></div>
-        </div>
-        <div id="questionArea"></div>
-        <div id="examControls">
-          <button id="prevQ">Previous</button>
-          <button id="skipQ">Skip</button>
-          <button id="nextQ">Next</button>
-          <button id="submitExam">Submit</button>
-        </div>
-      </section>
+  <!-- ===== Exam Section ===== -->
+  <section id="examSection" class="hidden">
+    <h2 id="examTitle"></h2>
+    <div id="timer">3:00:00</div>
+    <div id="questionArea"></div>
+    <div class="controls">
+      <button id="prevQ">Prev</button>
+      <button id="nextQ">Next</button>
+      <button id="skipQ">Skip</button>
+      <button id="submitExam">Submit Exam</button>
+      <button id="backToWeeks">Back to Weeks</button>
+    </div>
+  </section>
 
-      <section id="resultSection" class="hidden">
-        <h2>Result</h2>
-        <div id="resultContent"></div>
-        <button id="doneBtn">Done</button>
-      </section>
-    </main>
-  </div>
+  <!-- ===== Result Section ===== -->
+  <section id="resultSection" class="hidden">
+    <h2>Result</h2>
+    <div id="resultContent"></div>
+    <button id="doneBtn">Done</button>
+  </section>
 
+  <!-- ===== Firebase v8 CDN ===== -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
+  <!-- ===== Firebase Config ===== -->
+  <script src="firebase-config.js"></script>
+
+  <!-- ===== App Logic ===== -->
   <script src="app.js"></script>
 </body>
 </html>
