--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
   <title>NEET Practice Portal</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Firebase SDK (use script option) -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js"></script>
-  <script src="firebase-config.js"></script> <!-- put your config here -->
+ <!-- ✅ Firebase v8 compat version -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+<!-- ✅ Firebase Config must be before app.js -->
+<script src="firebase-config.js"></script>
+<script src="app.js"></script>
 </head>
 <body>
   <div class="wrap">
