--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>NEET Practice Portal</title>
+  <title>PRINCESS NEET Practice Portal</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -23,7 +23,7 @@
 
   <div class="wrap">
     <header>
-      <h1>NEET Practice Portal</h1>
+      <h1>PRINCESS NEET Practice Portal</h1>
       <div id="userBadge" class="hidden"></div>
     </header>
 
