--- a/index.html
+++ b/index.html
@@ -3,60 +3,52 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PRINCESS NEET Practice Portal</title>
+  <title>Princess 4X Practice Portal 💞</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
+
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 </head>
 <body>
-  <!-- Background Design -->
-  <div class="background">
-    <div class="floating-shapes">
-      <div class="shape shape-1"></div>
-      <div class="shape shape-2"></div>
-      <div class="shape shape-3"></div>
-      <div class="shape shape-4"></div>
-    </div>
-  </div>
-
   <div class="wrap">
-    <header>
-      <h1>PRINCESS NEET Practice Portal</h1>
-      <div id="userBadge" class="hidden"></div>
+    <header class="hero">
+      <div class="logo">👑</div>
+      <h1>Princess 4X Practice Portal</h1>
     </header>
 
-    <main id="main">
-      <section id="enterSection">
-        <div class="welcome-card">
-          <h2>Welcome to NEET Prep</h2>
-          <p>Enter your name to begin your practice journey</p>
-          <div class="input-group">
-            <input type="text" id="studentName" placeholder="Enter your full name" />
-            <button id="enterBtn">Start Learning</button>
-          </div>
+    <main class="main">
+      <!-- Start Section -->
+      <section class="card" id="enterSection">
+        <h2>Welcome to NEET Prep 💖</h2>
+        <p>Enter your name to begin your practice journey</p>
+        <input type="text" id="studentName" placeholder="Your full name">
+        <div class="row">
+          <button id="enterBtn">Start Test</button>
         </div>
       </section>
 
-      <section id="weeksSection" class="hidden">
-        <h2>Weeks Schedule</h2>
+      <!-- Weeks Section -->
+      <section class="card hidden" id="weeksSection">
+        <h2>Weeks Schedule 🗓️</h2>
         <div id="weeksContainer" class="weeks-grid"></div>
       </section>
 
-      <section id="examSection" class="hidden">
-        <div id="examHeader">
-          <button id="backToWeeks">← Back</button>
-          <h2 id="examTitle">Week</h2>
+      <!-- Exam Section -->
+      <section class="card hidden" id="examSection">
+        <div class="exam-top">
+          <div id="timer">⏰ 03:00:00</div>
+          <div id="examTitle"></div>
         </div>
-        
-        <!-- Timer without white box -->
-        <div id="timer">
-          ⏰ Time Remaining: <span id="timeDisplay">180:00</span>
+
+        <div id="questionArea">
+          <div id="question" class="q-card"></div>
+          <div id="options" class="options"></div>
         </div>
-        
-        <div id="questionArea"></div>
-        <div id="examControls">
+
+        <div id="examControls" class="nav">
           <button id="prevQ">Previous</button>
           <button id="skipQ">Skip</button>
           <button id="nextQ">Next</button>
@@ -64,12 +56,19 @@
         </div>
       </section>
 
-      <section id="resultSection" class="hidden">
-        <h2>Result</h2>
+      <!-- Result Section -->
+      <section class="card hidden" id="resultSection">
+        <h2>🎉 Well Done Princess!</h2>
         <div id="resultContent"></div>
-        <button id="doneBtn">Done</button>
+        <div class="row">
+          <button id="doneBtn">Take Again</button>
+        </div>
       </section>
     </main>
+
+    <footer class="foot">
+      Made with 💕 by <b>Princess</b>
+    </footer>
   </div>
 
   <!-- Firebase Config -->
@@ -86,8 +85,10 @@
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.firestore();
-    console.log("Firebase connected successfully!");
+    console.log("🔥 Firebase connected successfully!");
   </script>
+
+  <!-- App Logic -->
   <script src="app.js"></script>
 </body>
 </html>
