--- a/index.html
+++ b/index.html
@@ -3,70 +3,76 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Princess 4X Practice Portal 💖</title>
+  <title>PRINCESS NEET Practice Portal</title>
   <link rel="stylesheet" href="style.css" />
-
-  <!-- Firebase SDK (no change) -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 </head>
-
 <body>
-  <div class="page romantic-bg">
-    <header class="hero">
-      <div class="logo">💗</div>
-      <h1>Princess 4X Practice Portal</h1>
+  <!-- Background Design -->
+  <div class="background">
+    <div class="floating-shapes">
+      <div class="shape shape-1"></div>
+      <div class="shape shape-2"></div>
+      <div class="shape shape-3"></div>
+      <div class="shape shape-4"></div>
+    </div>
+  </div>
+
+  <div class="wrap">
+    <header>
+      <h1>PRINCESS NEET Practice Portal</h1>
       <div id="userBadge" class="hidden"></div>
     </header>
 
-    <main class="main">
-      <!-- Start Section -->
-      <section class="card" id="enterSection">
-        <h2>Welcome Beautiful Soul ✨</h2>
-        <p>Enter your name and begin your NEET practice with love 💫</p>
-        <input id="studentName" placeholder="Your full name" />
-        <div class="row">
-          <button id="enterBtn">Start Test 💕</button>
+    <main id="main">
+      <section id="enterSection">
+        <div class="welcome-card">
+          <h2>Welcome to NEET Prep</h2>
+          <p>Enter your name to begin your practice journey</p>
+          <div class="input-group">
+            <input type="text" id="studentName" placeholder="Enter your full name" />
+            <button id="enterBtn">Start Learning</button>
+          </div>
         </div>
       </section>
 
-      <!-- Weeks Section -->
-      <section class="card hidden" id="weeksSection">
-        <h2>Your Practice Weeks 📚</h2>
+      <section id="weeksSection" class="hidden">
+        <h2>Weeks Schedule</h2>
         <div id="weeksContainer" class="weeks-grid"></div>
       </section>
 
-      <!-- Exam Section -->
-      <section class="card hidden" id="examSection">
-        <div class="exam-top">
-          <div id="timer">⏰ Time Remaining: <span id="timeDisplay">180:00</span></div>
-          <div id="examTitle"></div>
+      <section id="examSection" class="hidden">
+        <div id="examHeader">
+          <button id="backToWeeks">← Back</button>
+          <h2 id="examTitle">Week</h2>
         </div>
-        <div id="questionArea" class="question"></div>
-        <div class="nav">
+        
+        <!-- Timer without white box -->
+        <div id="timer">
+          ⏰ Time Remaining: <span id="timeDisplay">180:00</span>
+        </div>
+        
+        <div id="questionArea"></div>
+        <div id="examControls">
           <button id="prevQ">Previous</button>
           <button id="skipQ">Skip</button>
           <button id="nextQ">Next</button>
           <button id="submitExam">Submit</button>
         </div>
-        <button id="backToWeeks" class="back-btn">⬅ Back</button>
       </section>
 
-      <!-- Result Section -->
-      <section class="card hidden" id="resultSection">
-        <h2>Well Done 💐</h2>
-        <div id="resultContent" class="resText"></div>
-        <div class="row">
-          <button id="doneBtn">Back to Weeks</button>
-        </div>
+      <section id="resultSection" class="hidden">
+        <h2>Result</h2>
+        <div id="resultContent"></div>
+        <button id="doneBtn">Done</button>
       </section>
     </main>
-
-    <footer class="foot">Made with ❤️ by Princess</footer>
   </div>
 
-  <!-- Firebase Config (unchanged) -->
+  <!-- Firebase Config -->
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyB64KBoank1xHvTkzz4hDPG4Iz8YdGx-Vc",
@@ -82,8 +88,6 @@
     const db = firebase.firestore();
     console.log("Firebase connected successfully!");
   </script>
-
-  <!-- App Script (unchanged) -->
   <script src="app.js"></script>
 </body>
 </html>
