--- a/index.html
+++ b/index.html
@@ -3,17 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PRINCESS NEET Practice Portal</title>
+  <title>NEET Practice Portal</title>
   <link rel="stylesheet" href="style.css" />
-  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 </head>
 <body>
+  <div class="background">
+    <div class="floating-shapes">
+      <div class="shape shape-1"></div>
+      <div class="shape shape-2"></div>
+      <div class="shape shape-3"></div>
+      <div class="shape shape-4"></div>
+    </div>
+  </div>
+
   <div class="wrap">
     <header>
-      <h1>PRINCESS NEET Practice Portal</h1>
+      <h1>NEET Practice Portal</h1>
       <div id="userBadge" class="hidden"></div>
     </header>
 
@@ -61,7 +69,6 @@
     </main>
   </div>
 
-  <!-- Firebase Config -->
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyB64KBoank1xHvTkzz4hDPG4Iz8YdGx-Vc",
@@ -75,9 +82,8 @@
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
     const db = firebase.firestore();
-    console.log("✅ Firebase connected successfully!");
+    console.log("Firebase connected successfully!");
   </script>
-
   <script src="app.js"></script>
 </body>
 </html>
