--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NEET Practice Portal</title>
   <link rel="stylesheet" href="style.css" />
+  <!-- Firebase SDK (use script option) -->
+ <!-- ✅ Firebase v8 compat version -->
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+
+<!-- ✅ Firebase Config must be before app.js -->
+<script src="firebase-config.js"></script>
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 </head>
 <body>
+  <!-- Background Design -->
   <div class="background">
     <div class="floating-shapes">
       <div class="shape shape-1"></div>
@@ -27,6 +37,8 @@
 
     <main id="main">
       <section id="enterSection">
+        <input id="studentName" placeholder="Enter your name" />
+        <button id="enterBtn">Enter</button>
         <div class="welcome-card">
           <h2>Welcome to NEET Prep</h2>
           <p>Enter your name to begin your practice journey</p>
@@ -47,11 +59,14 @@
           <button id="backToWeeks">← Back</button>
           <h2 id="examTitle">Week</h2>
         </div>
-        
+
+        <!-- YAHAN TIMER ADD KIYA HAI -->
+        <div id="timer" style="text-align: center; font-size: 20px; font-weight: bold; margin: 15px 0; padding: 10px; background: #f0f8ff; border-radius: 8px; border: 2px solid #007bff;">
+        <!-- Timer without white box -->
         <div id="timer">
           ⏰ Time Remaining: <span id="timeDisplay">180:00</span>
         </div>
-        
+
         <div id="questionArea"></div>
         <div id="examControls">
           <button id="prevQ">Previous</button>
@@ -69,6 +84,7 @@
     </main>
   </div>
 
+  <!-- Firebase Config -->
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyB64KBoank1xHvTkzz4hDPG4Iz8YdGx-Vc",
@@ -86,4 +102,4 @@
   </script>
   <script src="app.js"></script>
 </body>
-</html>
+  </html>
