--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Princess 4X Practice Portal</title>
+  <title>Prince 4X Practice Portal</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   
   <!-- Firebase SDK -->
@@ -320,7 +320,7 @@
 <div class="page">
   <header class="hero">
     <div class="logo">👑</div>
-    <h1>Princess 4X Practice Portal</h1>
+    <h1>Prince 4X Practice Portal</h1>
     <div id="userBadge" class="hidden"></div>
   </header>
   
@@ -367,7 +367,7 @@
     </section>
   </main>
   
-  <footer class="foot">Made By Princess ❤️ </footer>
+  <footer class="foot">Made By Prince ❤️ </footer>
 </div>
 
 <!-- Firebase Configuration -->
